# GoPrivate

./: .gitignore  build_script.py  readme.md  requirements.txt
android_app/: build.gradle.kts  gradle.properties  settings.gradle.kts
android_app/app/: build.gradle.kts  proguard-rules.pro
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/assets/: engine_a_features.json  engine_b_features.json  engine_c_label_mapping.json
android_app/app/src/main/cpp/: CMakeLists.txt  lwipopts.h  sys_arch.c
android_app/app/src/main/cpp/arch/: cc.h
android_app/app/src/main/cpp/netguard_core/: dns.c  icmp.c  ip.c  netguard.c  netguard.h  pcap.c  session.c  tcp.c  tls.c  udp.c  util.c
android_app/app/src/main/res/drawable/: bg_cyber_terminal.xml  bg_cyber_terminal_light.xml  bg_splash_simple.xml  binary_pattern_1.xml  binary_pattern_2.xml  binary_pattern_dense.xml  binary_pattern_medium.xml  binary_pattern_sparse.xml  btn_cyber_glow.xml  divider_cyber.xml  glitch_overlay.xml  grid_pattern.xml  grid_pattern_light.xml  ic_menu.xml  ic_scanner.xml  ic_search.xml  ic_settings.xml  ic_shield_active.xml  ic_shield_inactive.xml  noise_texture.xml  noise_texture_light.xml  overlay_scan_lines.xml  scan_line_animated.xml  scan_line_frame_1.xml  scan_line_frame_3.xml  scan_line_frame_4.xml
android_app/app/src/main/res/layout/: activity_main.xml  activity_splash.xml  fragment_home.xml  fragment_scanner.xml  fragment_settings.xml  fragment_threat_log.xml  item_app_scanner_cyber.xml  item_threat_log_cyber.xml  (+1 more)
android_app/gradle/: libs.versions.toml
docs/: index.html
(+53 files in other folders)
